[gd_scene load_steps=2 format=2]

[ext_resource path="res://StartScreen.gd" type="Script" id=1]

[node name="StartScreen" type="Node2D"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -1.0
margin_top = 1.0
margin_right = 1024.0
margin_bottom = 598.0
color = Color( 0.231373, 0.482353, 0.686275, 1 )

[node name="Title" type="Label" parent="."]
margin_left = 432.0
margin_top = 84.0
margin_right = 546.0
margin_bottom = 115.0
text = "Game Jam 2022"

[node name="By" type="Label" parent="."]
margin_left = 413.0
margin_top = 128.0
margin_right = 552.0
margin_bottom = 142.0
text = "By John, Alex, Blake"

[node name="Level Select" type="Button" parent="."]
margin_left = 410.0
margin_top = 175.0
margin_right = 546.0
margin_bottom = 235.0
text = "Level Select"

[node name="L1" type="Button" parent="."]
visible = false
margin_left = 104.0
margin_top = 310.0
margin_right = 242.0
margin_bottom = 384.0
text = "Level 1"

[node name="L2" type="Button" parent="."]
visible = false
margin_left = 407.0
margin_top = 309.0
margin_right = 545.0
margin_bottom = 383.0
text = "Level 2"

[node name="L3" type="Button" parent="."]
visible = false
margin_left = 689.0
margin_top = 308.0
margin_right = 827.0
margin_bottom = 382.0
text = "Level 3"

[node name="Back" type="Button" parent="."]
visible = false
margin_left = 437.0
margin_top = 505.0
margin_right = 523.0
margin_bottom = 550.0
text = "Back"

[connection signal="pressed" from="Level Select" to="." method="_on_Level_Select_pressed"]
[connection signal="pressed" from="L1" to="." method="_on_L1_pressed"]
[connection signal="pressed" from="L2" to="." method="_on_L2_pressed"]
[connection signal="pressed" from="Back" to="." method="_on_Back_pressed"]
